@@ -1,3 +1,9 @@
+2008-01-18  Takeru INOUE  <takeru.inoue _ gmail.com>
+
+        * release 0.0.5:
+	* Build.PL
+	- fix dependency
+
 2008-01-13  Takeru INOUE  <takeru.inoue _ gmail.com>
 
         * release 0.0.4:
